--- a/src/Components/Header/header.styles.scss
+++ b/src/Components/Header/header.styles.scss
@@ -5,21 +5,22 @@
   justify-content: space-between;
   margin-bottom: 25px;
 
-.logo-container {
+  .logo-container {
     height: 100%;
     width: 70px;
     padding: 25px;
   }
 
-.options {
+  .options {
     width: 50%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
 
-  .option {
+    .option {
       padding: 10px 15px;
+      cursor: pointer;
     }
   }
 }
